[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ring/star_stone_on_4.png" type="Texture" id=1]
[ext_resource path="res://assets/ring/star_stone_on_1.png" type="Texture" id=2]
[ext_resource path="res://assets/ring/star_stone_on_2.png" type="Texture" id=3]
[ext_resource path="res://assets/ring/star_stone_off.png" type="Texture" id=4]
[ext_resource path="res://assets/ring/star_stone_on_3.png" type="Texture" id=5]
[ext_resource path="res://ring/StarStone.gd" type="Script" id=6]
[ext_resource path="res://environment/Star.tscn" type="PackedScene" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "activated",
"speed": 7.0
} ]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.925266, 0.511808, 0.0719189 )

[node name="StarStone" type="StaticBody"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0 )
script = ExtResource( 6 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.900698, 0.434445, 0, -0.434445, 0.900698, 0, 1, 0 )
shaded = true
alpha_cut = 2
frames = SubResource( 1 )
animation = "activated"
frame = 7
playing = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.900698, 0.434445, 0, -0.434445, 0.900698, 0, 0.386313, 0.145127 )
shape = SubResource( 2 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0.59253, 0.310204 )
light_color = Color( 0.101961, 0.596078, 0.839216, 1 )
light_energy = 2.0

[node name="Star" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 1.45, 0 )
[connection signal="input_event" from="." to="." method="_on_StarStone_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_StarStone_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_StarStone_mouse_exited"]
